<resources>
    <string name="app_name">CasioWatch</string>

    <string name="default_time">00:00</string>
    <string name="default_seconds">00</string>
    <string name="default_weekDay">mo</string>
    <string name="default_day_of_month">1</string>

    <string name="twenty_four_hours_format">24H</string>
    <string name="pm_format">pm</string>
    <string name="alarm_text">AL</string>
    <string name="stopwatch_text">ST</string>
    <string name="stopwatch_split">SPLIT</string>

    <string-array name="weekDays">
        <item>mo</item>
        <item>tu</item>
        <item>we</item>
        <item>th</item>
        <item>fr</item>
        <item>sa</item>
        <item>su</item>
    </string-array>

    <string name="default_stopwatch_ten_milliseconds">00</string>

</resources>
